--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- headshot does not appear on mobile -->
+
 <head>
 
   <!-- Page Information
@@ -144,7 +146,7 @@
             <a class="button button-spotify" href="https://open.spotify.com/show/7q93fvsj94F2Hrlwp5LaP8?si=68fb445dce4a4517" target="_blank" rel="noopener">
                 <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">Bet on Lacrosse Podcast</a>
 
-            <a class="button button-PLT" href="https://prolacrossetalk.com/?s=science" target="_blank" rel="noopener">
+            <a class="button button-PLT" href="https://prolacrossetalk.com/lacrosse-science-ben-reeves-curves-the-bullet/" target="_blank" rel="noopener">
                 <img class="icon" src="images/icons/PLT.png" alt="">Sports Science Article</a>
 
             <a class="button button-PLT" href="https://prolacrossetalk.com/2022-nll-division-finals-preview-who-has-the-betting-edge-in-the-chase-for-the-championship/" target="_blank" rel="noopener">
