add google scholar

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
             <a class="button button-github" href="https://www.researchgate.net/profile/Brian-Andrews-11" target="_blank" rel="noopener">
                 <img class="icon" src="images/icons/ResearchGate.svg.png">Research Gate</a>
 
+            <!-- Google Scholar -->
+            <a class="button button-github" href="https://scholar.google.com/citations?user=f8YOnrQAAAAJ&hl=en" target="_blank" rel="noopener">
+                <img class="icon" src="images/icons/googlescholar.png">Google Scholar</a>
+
             <!-- Orcid -->
             <a class="button button-github" href="https://orcid.org/0000-0003-4469-3147" target="_blank" rel="noopener">
                 <img class="icon" src="images/icons/ORCID_iD.svg.png">Orcid Record</a>
