--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
           </div>
         </div>
 
+        <div class="dropdown">
+          <button onclick="Sociallist()" class="dropbtn">Social Media<img class="icon" src="images/downarrow.png"></button>
+          <!-- style="display:none" eliminates needing to click twice to first open the drop down menu -->
+          <div id="Social" style="display:none" class="dropdown-content">
+            <a class="button button-twit" href="https://twitter.com/swerdnanairb" target="_blank" rel="noopener">
+                <img class="icon" src="images/icons/twitter.svg" alt="">Twitter</a>
+            <a class="button button-Action" href="https://myaction.app/b9andrews" target="_blank" rel="noopener">
+                <img class="icon" src="images/icons/ActionLogoCheck.jpg" alt="">Action Network</a>
+          </div>
+        </div>
+
         <!-- Email -->
         <a class="button button-default" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/email.svg" alt="Email Icon">b9andrews@gmail.com</a>
