--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/headshot.png" class="avatar" srcset="images/headshot@2x.png 2x">
+        <img src="images/headshot.png" class="avatar">
 
         <!-- Title -->
         <h1>Brian Andrews</h1>
