dropdown arrows look better... again

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         -->
 
         <div class="dropdown">
-          <button onclick="PRlist()" class="dropbtn">Professional Resources<img class="arrow" src="images/downarrow-1.png"></button>
+          <button onclick="PRlist()" class="dropbtn">Professional Resources<img class="arrow" src="images/downarrow-1-20.png"></button>
           <!-- style="display:none" eliminates needing to click twice to first open the drop down menu -->
           <div id="PR" style="display:none" class="dropdown-content">
             <!-- Resume -->
@@ -139,7 +139,7 @@
         <br>
 
         <div class="dropdown">
-          <button onclick="PLTlist()" class="dropbtn-PLT"><img class="icon" src="images/icons/PLT.png">Pro Lacrosse Talk<img class="arrow" src="images/downarrow-1.png"></button>
+          <button onclick="PLTlist()" class="dropbtn-PLT"><img class="icon" src="images/icons/PLT.png">Pro Lacrosse Talk<img class="arrow" src="images/downarrow-1-20.png"></button>
           <!-- style="display:none" eliminates needing to click twice to first open the drop down menu -->
           <div id="PLT" style="display:none" class="dropdown-content">
             <!-- Put here spotify links and links to an article or two!
@@ -159,7 +159,7 @@
         </div>
 
         <div class="dropdown">
-          <button onclick="Sociallist()" class="dropbtn">Social Media<img class="arrow" src="images/downarrow-1.png"></button>
+          <button onclick="Sociallist()" class="dropbtn">Social Media<img class="arrow" src="images/downarrow-1-20.png"></button>
           <!-- style="display:none" eliminates needing to click twice to first open the drop down menu -->
           <div id="Social" style="display:none" class="dropdown-content">
             <a class="button button-twit" href="https://twitter.com/swerdnanairb" target="_blank" rel="noopener">
