--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
 
         <div class="dropdown">
-          <button onclick="Sociallist()" class="dropbtn">Social Media<img class="arrow" src="images/downarrow-1-20.png" height="20" width="20"></button>
+          <button onclick="Sociallist()" class="dropbtn">Social Media<img class="arrow" src="images/downarrow-1-20.png"></button>
           <!-- style="display:none" eliminates needing to click twice to first open the drop down menu -->
           <div id="Social" style="display:none" class="dropdown-content">
             <a class="button button-twit" href="https://twitter.com/swerdnanairb" target="_blank" rel="noopener">
