add gitlab, update resume

--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
             <img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
         <br>
 
+        <!-- GitLab -->
+        <a class="button button-gitlab" href="https://gitlab.com/andrewsb8" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
+        <br>
+
         <div class="dropdown">
           <button onclick="PLTlist()" class="dropbtn-PLT"><img class="icon" src="images/icons/PLT.png">Pro Lacrosse Talk<img class="arrow" src="images/downarrow-1-20.png"></button>
           <!-- style="display:none" eliminates needing to click twice to first open the drop down menu -->
