--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h1>Brian Andrews</h1>
 
         <!-- Short Bio -->
-        <p>I'm a PhD candidate and computational biophysics researcher at Drexel University.
+        <p>I'm a Postdoctoral Bucher-Jackson Fellow and computational biophysics researcher at Bryn Mawr College.
         This page is a collection of my academic, professional, and hobby projects including research, publications,
         programming, lacrosse, and sports analytics. Check out the links below to see what I'm up to!</p>
 
