--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
             You can edit or remove anything here to make your own footer.
         -->
         <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>.</p>
+        <p>Custom domain was set up using Cloudflare and <a href="https://medium.com/@samdutton/github-pages-cloudflare-custom-domain-checklist-e86c786194a4"> this tutorial.</a></p>
 
       </div>
     </div>
