--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
             <a class="button button-github" href="https://github.com/andrewsb8/PLT-PLL-WinProbability/tree/main/Win-Probability-Model" target="_blank" rel="noopener">
                 <img class="icon" src="images/icons/github.svg" alt="">Win Probability Model</a>
 
+            <a class="button button-PLT" href="https://lookerstudio.google.com/reporting/1e92e10b-2bb4-4b4a-856e-01e82430e3ae" target="_blank" rel="noopener">
+                <img class="icon" src="images/icons/PLT.png" alt="">PLL Betting Report</a>
+
+            <a class="button button-PLT" href="https://lookerstudio.google.com/reporting/ceddd101-2fd7-4d0d-9f8e-4601e18f8d9a/page/p_fnc8ch24pc" target="_blank" rel="noopener">
+                <img class="icon" src="images/icons/PLT.png" alt="">NLL Betting Report</a>
+
             <a class="button button-PLT" href="https://prolacrossetalk.com/lacrosse-science-ben-reeves-curves-the-bullet/" target="_blank" rel="noopener">
                 <img class="icon" src="images/icons/PLT.png" alt="">Sports Science Article</a>
 
             <a class="button button-PLT" href="https://prolacrossetalk.com/2022-nll-division-finals-preview-who-has-the-betting-edge-in-the-chase-for-the-championship/" target="_blank" rel="noopener">
                 <img class="icon" src="images/icons/PLT.png" alt="">Latest Lacrosse Article</a>
-
-            <a class="button button-spotify" href="https://open.spotify.com/show/1wvPf4MiVvv6HY7tIGcdYJ?si=c3a123beab884c64" target="_blank" rel="noopener">
-                <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">PLT Podcast</a>
-
-            <a class="button button-spotify" href="https://open.spotify.com/show/7q93fvsj94F2Hrlwp5LaP8?si=68fb445dce4a4517" target="_blank" rel="noopener">
-                <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">Bet on Lacrosse Podcast</a>
 
 
           </div>
